Colaboratory를 통해 생성됨

--- a/lec_7.ipynb
+++ b/lec_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lec_7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPHe/4yHIgFFrCI0R0c1iYJ",
+      "authorship_tag": "ABX9TyPGynQXz7QZpS6RBOrLM2YM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,15 +30,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dw3mvvRrXqo2"
+        "id": "Dw3mvvRrXqo2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c5cc414-f81d-4b4b-9b36-50375a5c75c2"
       },
       "source": [
         "import torch\n",
         "import torch.nn.functional as F\n",
+        "import numpy as np\n",
         "from torch.autograd import Variable\n",
-        "\n",
-        "x_data = Variable(torch.Tensor([[1.0], [2.0], [3.0], [4.0]]))\n",
-        "y_data = Variable(torch.Tensor([[0.], [0.], [1.], [1.]]))\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')\n",
+        "xy = np.loadtxt('/content/gdrive/My Drive/Colab Notebooks/diabetes.csv', delimiter=',', dtype=np.float32)\n",
+        "x_data = Variable(torch.from_numpy(xy[:, 0:-1]))\n",
+        "y_data = Variable(torch.from_numpy(xy[:, [-1]]))\n",
+        "print(f'X\\'s shape: {x_data.shape} | Y\\'s shape: {y_data.shape}')\n",
         "\n",
         "class Model(torch.nn.Module):\n",
         "    def __init__(self):\n",
@@ -67,6 +75,126 @@
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n",
+            "X's shape: torch.Size([759, 8]) | Y's shape: torch.Size([759, 1])\n",
+            "0 0.6537075042724609\n",
+            "1 0.6527606844902039\n",
+            "2 0.6519213318824768\n",
+            "3 0.6511769890785217\n",
+            "4 0.6505165696144104\n",
+            "5 0.6499305963516235\n",
+            "6 0.6494103670120239\n",
+            "7 0.6489484310150146\n",
+            "8 0.6485381126403809\n",
+            "9 0.6481735110282898\n",
+            "10 0.6478495597839355\n",
+            "11 0.6475615501403809\n",
+            "12 0.6473054885864258\n",
+            "13 0.6470776796340942\n",
+            "14 0.6468750238418579\n",
+            "15 0.6466947197914124\n",
+            "16 0.6465343236923218\n",
+            "17 0.6463913917541504\n",
+            "18 0.6462642550468445\n",
+            "19 0.6461510062217712\n",
+            "20 0.6460501551628113\n",
+            "21 0.6459602117538452\n",
+            "22 0.6458801627159119\n",
+            "23 0.6458088159561157\n",
+            "24 0.6457450985908508\n",
+            "25 0.6456884145736694\n",
+            "26 0.6456378698348999\n",
+            "27 0.6455927491188049\n",
+            "28 0.6455525159835815\n",
+            "29 0.645516574382782\n",
+            "30 0.6454845070838928\n",
+            "31 0.6454558372497559\n",
+            "32 0.6454303860664368\n",
+            "33 0.6454075574874878\n",
+            "34 0.6453871726989746\n",
+            "35 0.6453689336776733\n",
+            "36 0.6453526616096497\n",
+            "37 0.6453381180763245\n",
+            "38 0.6453251242637634\n",
+            "39 0.6453134417533875\n",
+            "40 0.6453030109405518\n",
+            "41 0.6452937126159668\n",
+            "42 0.6452853083610535\n",
+            "43 0.6452777981758118\n",
+            "44 0.6452710628509521\n",
+            "45 0.6452651023864746\n",
+            "46 0.6452596187591553\n",
+            "47 0.6452547311782837\n",
+            "48 0.6452503800392151\n",
+            "49 0.6452464461326599\n",
+            "50 0.6452428698539734\n",
+            "51 0.6452396512031555\n",
+            "52 0.6452367901802063\n",
+            "53 0.6452341675758362\n",
+            "54 0.6452318429946899\n",
+            "55 0.6452296376228333\n",
+            "56 0.6452276706695557\n",
+            "57 0.6452258825302124\n",
+            "58 0.6452242732048035\n",
+            "59 0.6452227234840393\n",
+            "60 0.6452213525772095\n",
+            "61 0.645220160484314\n",
+            "62 0.6452189683914185\n",
+            "63 0.6452178955078125\n",
+            "64 0.6452170014381409\n",
+            "65 0.6452160477638245\n",
+            "66 0.6452151536941528\n",
+            "67 0.6452143788337708\n",
+            "68 0.6452136635780334\n",
+            "69 0.6452128887176514\n",
+            "70 0.6452122926712036\n",
+            "71 0.6452116966247559\n",
+            "72 0.6452111005783081\n",
+            "73 0.6452105045318604\n",
+            "74 0.6452099680900574\n",
+            "75 0.6452094912528992\n",
+            "76 0.6452089548110962\n",
+            "77 0.645208477973938\n",
+            "78 0.6452080011367798\n",
+            "79 0.6452075839042664\n",
+            "80 0.6452071666717529\n",
+            "81 0.6452067494392395\n",
+            "82 0.6452063322067261\n",
+            "83 0.6452059149742126\n",
+            "84 0.645205557346344\n",
+            "85 0.6452051401138306\n",
+            "86 0.6452047824859619\n",
+            "87 0.6452044248580933\n",
+            "88 0.6452040672302246\n",
+            "89 0.6452036499977112\n",
+            "90 0.6452032923698425\n",
+            "91 0.6452029347419739\n",
+            "92 0.6452025771141052\n",
+            "93 0.6452022790908813\n",
+            "94 0.6452018618583679\n",
+            "95 0.645201563835144\n",
+            "96 0.6452012062072754\n",
+            "97 0.6452008485794067\n",
+            "98 0.6452005505561829\n",
+            "99 0.645200252532959\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3-SbcNa7wUs4"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
