Colaboratory를 통해 생성됨

--- a/lec_7.ipynb
+++ b/lec_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lec_7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPGynQXz7QZpS6RBOrLM2YM",
+      "authorship_tag": "ABX9TyOBZKMK0K69HDuWl2otnTFK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,7 +191,166 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3-SbcNa7wUs4"
+        "id": "3-SbcNa7wUs4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8eab58cb-1acd-432d-ea3c-09fff8aa7bfc"
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn.functional as F\n",
+        "import numpy as np\n",
+        "from torch.autograd import Variable\n",
+        "from google.colab import drive\n",
+        "xy = np.loadtxt('/content/gdrive/My Drive/Colab Notebooks/diabetes.csv', delimiter=',', dtype=np.float32)\n",
+        "x_data = Variable(torch.from_numpy(xy[:, 0:-1]))\n",
+        "y_data = Variable(torch.from_numpy(xy[:, [-1]]))\n",
+        "print(f'X\\'s shape: {x_data.shape} | Y\\'s shape: {y_data.shape}')\n",
+        "\n",
+        "class Model(torch.nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Model, self).__init__()\n",
+        "        self.l1 = torch.nn.Linear(8, 6)\n",
+        "        self.l2 = torch.nn.Linear(6, 4)\n",
+        "        self.l3 = torch.nn.Linear(4, 1)\n",
+        "        self.relu = F.relu\n",
+        "    def forward(self, x):\n",
+        "        out1 = self.relu(self.l1(x))\n",
+        "        out2 = self.relu(self.l2(out1))\n",
+        "        y_pred = self.relu(self.l3(out2))\n",
+        "        return y_pred\n",
+        "model = Model()\n",
+        "\n",
+        "criterion = torch.nn.MSELoss()\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr=0.1)\n",
+        "\n",
+        "for epoch in range(100):\n",
+        "    y_pred = model(x_data)\n",
+        "\n",
+        "    loss = criterion(y_pred, y_data)\n",
+        "    print(epoch, loss.item())\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "X's shape: torch.Size([759, 8]) | Y's shape: torch.Size([759, 1])\n",
+            "0 0.3773941695690155\n",
+            "1 0.32296016812324524\n",
+            "2 0.2881730794906616\n",
+            "3 0.2659471929073334\n",
+            "4 0.25174659490585327\n",
+            "5 0.24266955256462097\n",
+            "6 0.2368709295988083\n",
+            "7 0.2331697791814804\n",
+            "8 0.23080497980117798\n",
+            "9 0.2292918562889099\n",
+            "10 0.22832351922988892\n",
+            "11 0.22770217061042786\n",
+            "12 0.22730188071727753\n",
+            "13 0.22704213857650757\n",
+            "14 0.2268725037574768\n",
+            "15 0.22676067054271698\n",
+            "16 0.22668570280075073\n",
+            "17 0.22663454711437225\n",
+            "18 0.2265983521938324\n",
+            "19 0.22657175362110138\n",
+            "20 0.22655171155929565\n",
+            "21 0.2265360802412033\n",
+            "22 0.2265234738588333\n",
+            "23 0.22651240229606628\n",
+            "24 0.22650250792503357\n",
+            "25 0.22649402916431427\n",
+            "26 0.22648607194423676\n",
+            "27 0.22647836804389954\n",
+            "28 0.22647078335285187\n",
+            "29 0.22646339237689972\n",
+            "30 0.22645632922649384\n",
+            "31 0.2264496237039566\n",
+            "32 0.22644276916980743\n",
+            "33 0.22643612325191498\n",
+            "34 0.22642916440963745\n",
+            "35 0.22642169892787933\n",
+            "36 0.22641398012638092\n",
+            "37 0.2264058142900467\n",
+            "38 0.22639751434326172\n",
+            "39 0.22638916969299316\n",
+            "40 0.22638079524040222\n",
+            "41 0.22637224197387695\n",
+            "42 0.2263636291027069\n",
+            "43 0.22635479271411896\n",
+            "44 0.22634553909301758\n",
+            "45 0.22633643448352814\n",
+            "46 0.22632695734500885\n",
+            "47 0.2263171523809433\n",
+            "48 0.22630633413791656\n",
+            "49 0.2262955605983734\n",
+            "50 0.22628411650657654\n",
+            "51 0.22627268731594086\n",
+            "52 0.22626037895679474\n",
+            "53 0.22624742984771729\n",
+            "54 0.22623278200626373\n",
+            "55 0.2262178361415863\n",
+            "56 0.2262020856142044\n",
+            "57 0.22618511319160461\n",
+            "58 0.22616754472255707\n",
+            "59 0.22614946961402893\n",
+            "60 0.2261323183774948\n",
+            "61 0.22611606121063232\n",
+            "62 0.2260996252298355\n",
+            "63 0.22608211636543274\n",
+            "64 0.22606521844863892\n",
+            "65 0.22604817152023315\n",
+            "66 0.22603145241737366\n",
+            "67 0.22601282596588135\n",
+            "68 0.2259947657585144\n",
+            "69 0.22597703337669373\n",
+            "70 0.2259598672389984\n",
+            "71 0.22594305872917175\n",
+            "72 0.22592619061470032\n",
+            "73 0.22590947151184082\n",
+            "74 0.22589251399040222\n",
+            "75 0.22587454319000244\n",
+            "76 0.22585660219192505\n",
+            "77 0.22583743929862976\n",
+            "78 0.22581802308559418\n",
+            "79 0.22579926252365112\n",
+            "80 0.2257804274559021\n",
+            "81 0.22576263546943665\n",
+            "82 0.22574399411678314\n",
+            "83 0.2257261574268341\n",
+            "84 0.2257089763879776\n",
+            "85 0.225691020488739\n",
+            "86 0.22567212581634521\n",
+            "87 0.2256532609462738\n",
+            "88 0.2256341427564621\n",
+            "89 0.2256157249212265\n",
+            "90 0.22559654712677002\n",
+            "91 0.22557634115219116\n",
+            "92 0.22555474936962128\n",
+            "93 0.22553318738937378\n",
+            "94 0.22551175951957703\n",
+            "95 0.2254890352487564\n",
+            "96 0.22546616196632385\n",
+            "97 0.2254422903060913\n",
+            "98 0.22541841864585876\n",
+            "99 0.22539493441581726\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7_M6iKCi0e0B"
       },
       "source": [
         ""
